<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".functional_fragments.CreateProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical"
            android:text="@string/text_add_product"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp"
            tools:ignore="RtlCompat" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutProductName"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutProductLinkToMerch"
        style="@style/Widget.Provenance.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_link_to_merch">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextProductLinkToMerch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonQRCodeScanSellerAccount"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scan_seller_account" />

        <TextView
            android:id="@+id/textViewOrEnterBelow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/text_view_suggestion_enter_account"
            android:textAppearance="@style/TextAppearance.Provenance.Title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSellerAccountAddress"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_seller_account_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextSellerAccountAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateProduct"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_product" />
    </LinearLayout>
</ScrollView>