<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".QRNFCProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical"
            android:text="@string/text_product_created"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSuccess"
            android:textSize="30sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical"
            android:text="@string/text_new_product_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewQRCodeButton"
                    style="@style/Widget.Provenance.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_view_product_qr_code"
                    android:layout_marginEnd="12dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/writeNfcTagButton"
                    style="@style/Widget.Provenance.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_write_nfc_tag" />
            </LinearLayout>

        <ImageView
            android:id="@+id/qrCodeProductImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_content"
            android:gravity="center_vertical"
            android:minHeight="400dp"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>
