<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".functional_fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonQRCodeScan"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_qrcode_scan" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNFCTagScan"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:backgroundTint="@color/colorDisabled"
            android:text="@string/button_nfc_tag_scan" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Provenance.TextInputLayout"
            android:id="@+id/inputOwnerResellLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:visibility="invisible"
            android:hint="@string/hint_owner">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOwnerResellText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Provenance.TextInputLayout"
            android:id="@+id/inputNewBuyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:visibility="invisible"
            android:hint="@string/hint_new_buyer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNewBuyerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResellProduct"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDisabled"
            android:visibility="invisible"
            android:text="@string/button_resell" />

    </LinearLayout>
</ScrollView>