<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:text="@string/text_view_origin_product_information"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_view_origin_product_name"
            android:textAppearance="@style/TextAppearance.Provenance.Title"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewOriginProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_origin_product_name"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_view_origin_product_website"
            android:textAppearance="@style/TextAppearance.Provenance.Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOriginProductWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_origin_product_website"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_view_origin_product_manufacturer_name"
            android:textAppearance="@style/TextAppearance.Provenance.Title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOriginManufacturerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_origin_product_manufacturer_name"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_horizontal"
            android:text="@string/text_view_origin_product_tracking"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="8dp">

            <fragment
                android:id="@+id/map_provenance"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>