<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".CreateUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical"
            android:text="@string/text_create_user"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsernameLayout"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRoleLayout"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRoleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLocationLayout"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLocationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAccountAddressLayout"
            style="@style/Widget.Provenance.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAccountAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createUserButton"
            style="@style/Widget.Provenance.Button.Menu"
            android:layout_marginTop="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_user" />
    </LinearLayout>
</ScrollView>